--- a/roles/ds389_repl_monitoring/tasks/setup.yml
+++ b/roles/ds389_repl_monitoring/tasks/setup.yml
@@ -10,6 +10,7 @@
       with_items:
         - python3
         - python3-matplotlib
+        - python3-lib389
       delegate_to: localhost
       when: ansible_os_family == "RedHat"
       run_once: true
